--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-----------Group 1-------------->      
           <div class="box1">
             <div class="logobox container animate__animated animate__zoomInDown animate__slow href="#">
-              <img src="img/group_1_logo.PNG">
+              <img src="img/group_1_logo.png">
             </div>
           
           </div>
